# bank-account-rust

./: .gitignore  Cargo.toml  README.md  commit_stats.py
docs/developer/: README.md  testing_guide.md
docs/user/: README.md  troubleshooting.md
src/: main.rs
src/account/: management.rs  mod.rs  transactions.rs
src/audit/: archiver.rs  compliance.rs  mod.rs  repository.rs
src/cli/: account.rs  audit.rs  auth.rs  interactive.rs  mod.rs  roles.rs  security.rs  user.rs  utils.rs
src/config/: mod.rs
src/database/: backup.rs  migrations.rs  mod.rs  models.rs  schema.rs  tests.rs
src/security/: auth.rs  compliance.rs  encryption.rs  jwt.rs  mod.rs  password.rs  roles.rs  sensitive.rs  totp.rs  trusted_devices.rs
src/user/: mod.rs  profile.rs  registration.rs  two_factor.rs  validation.rs
tests/: user_tests.rs
